changed url and added styles

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -28,15 +28,14 @@
     </div>
     <div id="dialogBox" class="dialog">
       <div class="dialog-content">
-        <p id="dialog-info" class="dialog-info" title="Click to copy">
-          This is a nice dialog box.
-        </p>
+        <h1>Copy you new (short) link and enjoy!! 😉</h1>
+        <div id="dialog-info" class="dialog-info" title="Click to copy"></div>
         <button id="okBtn" class="ok-btn">OK</button>
       </div>
     </div>
     <div id="loading-screen">
       <div class="loader"></div>
-      <p class="loading-text">OOO00OooOO00OOooOOoO-ing your URL</p>
+      <a class="loading-text">OOO00OooOO00OOooOOoO-ing your URL</a>
     </div>
   </body>
   <script src="/static/script.js"></script>
